fixed divisible by 2 bug

--- a/4k_Video_Upscaler_Colab_(Real_ESRGAN).ipynb
+++ b/4k_Video_Upscaler_Colab_(Real_ESRGAN).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyORLsaCgJAVq+0XPdlKxdWE",
+      "authorship_tag": "ABX9TyO7ydsA7XUAAAvED4p+myy0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,18 +88,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "NX2v5PH9O7Sw"
       },
       "outputs": [],
       "source": [
-        "video_path=\"/content/pdesert 1.1.mp4\" #@param{type:\"string\"}\n",
+        "video_path=\"/content/desert 2.3.mp4\" #@param{type:\"string\"}\n",
         "output_dir=\"/content/\" #@param{type:\"string\"}\n",
-        "resolution = \"FHD\" # @param [\"FHD\", \"2k\", \"4k\"] {type:\"string\"}\n",
+        "resolution = \"2k\" # @param [\"FHD\", \"2k\", \"4k\"] {type:\"string\"}\n",
         "model = \"RealESRGAN_x4plus\" #@param [\"RealESRGAN_x4plus\" , \"RealESRGAN_x4plus_anime_6B\", \"realesr-animevideov3\"]\n",
-        "crop_to_fit=True #@param{type:\"boolean\"}\n",
+        "crop_to_fit=False #@param{type:\"boolean\"}\n",
         "\n",
         "if not os.path.exists(video_path):\n",
         "   assert False, \"Video file does not exist\"\n",
@@ -129,13 +129,12 @@
         "  final_width = final_height\n",
         "  final_height = temp\n",
         "\n",
-        "# make even\n",
-        "if final_height % 2 != 0:\n",
-        "  final_height +=1\n",
-        "if final_width % 2 != 0:\n",
-        "  final_width +=1\n",
-        "\n",
         "scale_factor = max(final_width/video_width, final_height/video_height)\n",
+        "isEven = int(video_width * scale_factor) % 2 == 0 and int(video_height * scale_factor) % 2 == 0\n",
+        "\n",
+        "while isEven == False:\n",
+        "  scale_factor += 0.01\n",
+        "  isEven = int(video_width * scale_factor) % 2 == 0 and int(video_height * scale_factor) % 2 == 0\n",
         "\n",
         "if not crop_to_fit:\n",
         "  print(f\"Upscaling from {video_width}x{video_height} to {int(video_width * scale_factor)}x{int(video_height * scale_factor)}, crop_to_fit={crop_to_fit}\")\n",
@@ -148,7 +147,7 @@
         "video_name_with_ext = os.path.basename(video_path)\n",
         "video_name = video_name_with_ext.replace(\".mp4\",\"\")\n",
         "upscaled_video_path = f\"{output_dir}/{video_name}_out.mp4\"\n",
-        "final_video_name = f\"{video_name}_upscaled_{final_width}_{final_height}.mp4\"\n",
+        "final_video_name = f\"{video_name}_upscaled_{int(video_width * scale_factor)}_{int(video_height * scale_factor)}.mp4\"\n",
         "final_video_path = os.path.join(output_dir, final_video_name)\n",
         "\n",
         "# crop to fit\n",
@@ -156,7 +155,12 @@
         "  command = f\"!ffmpeg -loglevel error -hwaccel cuda -y -i '{upscaled_video_path}' -c:v h264_nvenc -filter:v 'crop={final_width}:{final_height}' '{final_video_path}'\"\n",
         "  subprocess.run(command,shell=True)\n",
         "  print(\"Cropping to fit done..\")\n",
+        "else:\n",
+        "  command = f\"cp '{upscaled_video_path}' '{final_video_path}'\"\n",
+        "  subprocess.run(command,shell=True)\n",
         "\n",
+        "\n",
+        "subprocess.run(f\"rm '{upscaled_video_path}'\",shell=True)\n",
         "print(f\"Upscaled video saved to: {final_video_path}\")\n",
         "\n",
         "# save to drive\n",
@@ -193,7 +197,7 @@
         "cellView": "form",
         "id": "rIfUT_e9TqLp"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     }
   ]
