fixed cropping bug

--- a/4k_Video_Upscaler_Colab_(Real_ESRGAN).ipynb
+++ b/4k_Video_Upscaler_Colab_(Real_ESRGAN).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO7ydsA7XUAAAvED4p+myy0",
+      "authorship_tag": "ABX9TyMF5i9rBd8F0FyApQ+2zK80",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,9 @@
         "\n",
         "Adapted from: [Real-ESRGAN](https://github.com/xinntao/Real-ESRGAN)\n",
         "\n",
-        "Made with ❤️ by: [yuvraj108c](https://github.com/yuvraj108c)"
+        "Made with ❤️ by: [yuvraj108c](https://github.com/yuvraj108c)\n",
+        "\n",
+        "Github repository: https://github.com/yuvraj108c/4k-video-upscaler-colab"
       ],
       "metadata": {
         "id": "zEksijsOSulF"
@@ -53,6 +55,8 @@
     {
       "cell_type": "code",
       "source": [
+        "!nvidia-smi\n",
+        "\n",
         "from PIL import Image\n",
         "import cv2, os, subprocess\n",
         "from google.colab import drive\n",
@@ -80,7 +84,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 2. Upscale video"
+        "# 2. Upscale video\n",
+        "\n",
+        "- The upscaled video will be saved to `output_dir`\n",
+        "- If google drive is mounted, it will be also saved at `MyDrive/Upscaled Videos (REAL-ESRGAN)`\n"
       ],
       "metadata": {
         "id": "mZZPG007SB4A"
@@ -97,9 +104,9 @@
       "source": [
         "video_path=\"/content/desert 2.3.mp4\" #@param{type:\"string\"}\n",
         "output_dir=\"/content/\" #@param{type:\"string\"}\n",
-        "resolution = \"2k\" # @param [\"FHD\", \"2k\", \"4k\"] {type:\"string\"}\n",
+        "resolution = \"FHD\" # @param [\"FHD\", \"2k\", \"4k\"] {type:\"string\"}\n",
         "model = \"RealESRGAN_x4plus\" #@param [\"RealESRGAN_x4plus\" , \"RealESRGAN_x4plus_anime_6B\", \"realesr-animevideov3\"]\n",
-        "crop_to_fit=False #@param{type:\"boolean\"}\n",
+        "crop_to_fit=True #@param{type:\"boolean\"}\n",
         "\n",
         "if not os.path.exists(video_path):\n",
         "   assert False, \"Video file does not exist\"\n",
@@ -146,21 +153,24 @@
         "\n",
         "video_name_with_ext = os.path.basename(video_path)\n",
         "video_name = video_name_with_ext.replace(\".mp4\",\"\")\n",
-        "upscaled_video_path = f\"{output_dir}/{video_name}_out.mp4\"\n",
-        "final_video_name = f\"{video_name}_upscaled_{int(video_width * scale_factor)}_{int(video_height * scale_factor)}.mp4\"\n",
+        "upscaled_video_path = f\"{output_dir}{video_name}_out.mp4\"\n",
+        "\n",
+        "final_video_name = f\"{video_name}_upscaled_{final_width}_{final_height}.mp4\"\n",
+        "\n",
+        "if not crop_to_fit:\n",
+        "  final_video_name = f\"{video_name}_upscaled_{int(video_width * scale_factor)}_{int(video_height * scale_factor)}.mp4\"\n",
+        "\n",
         "final_video_path = os.path.join(output_dir, final_video_name)\n",
         "\n",
         "# crop to fit\n",
         "if crop_to_fit:\n",
-        "  command = f\"!ffmpeg -loglevel error -hwaccel cuda -y -i '{upscaled_video_path}' -c:v h264_nvenc -filter:v 'crop={final_width}:{final_height}' '{final_video_path}'\"\n",
+        "  command = f\"ffmpeg -loglevel error -hwaccel cuda -y -i '{upscaled_video_path}' -c:v h264_nvenc -filter:v  'crop={final_width}:{final_height}:(in_w-{final_width})/2:(in_h-{final_height})/2' -c:v libx264 -pix_fmt yuv420p '{final_video_path}'\"\n",
         "  subprocess.run(command,shell=True)\n",
         "  print(\"Cropping to fit done..\")\n",
-        "else:\n",
-        "  command = f\"cp '{upscaled_video_path}' '{final_video_path}'\"\n",
-        "  subprocess.run(command,shell=True)\n",
         "\n",
+        "command = f\"mv '{upscaled_video_path}' '{final_video_path}'\"\n",
+        "subprocess.run(command,shell=True)\n",
         "\n",
-        "subprocess.run(f\"rm '{upscaled_video_path}'\",shell=True)\n",
         "print(f\"Upscaled video saved to: {final_video_path}\")\n",
         "\n",
         "# save to drive\n",
