Fix deletion bug

--- a/4k_Video_Upscaler_Colab_(Real_ESRGAN).ipynb
+++ b/4k_Video_Upscaler_Colab_(Real_ESRGAN).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMF5i9rBd8F0FyApQ+2zK80",
+      "authorship_tag": "ABX9TyMugTEtDo3Y/Acs0/C/gJxM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,7 +102,7 @@
       },
       "outputs": [],
       "source": [
-        "video_path=\"/content/desert 2.3.mp4\" #@param{type:\"string\"}\n",
+        "video_path=\"/content/painting 4.mp4\" #@param{type:\"string\"}\n",
         "output_dir=\"/content/\" #@param{type:\"string\"}\n",
         "resolution = \"FHD\" # @param [\"FHD\", \"2k\", \"4k\"] {type:\"string\"}\n",
         "model = \"RealESRGAN_x4plus\" #@param [\"RealESRGAN_x4plus\" , \"RealESRGAN_x4plus_anime_6B\", \"realesr-animevideov3\"]\n",
@@ -168,8 +168,8 @@
         "  subprocess.run(command,shell=True)\n",
         "  print(\"Cropping to fit done..\")\n",
         "\n",
-        "command = f\"mv '{upscaled_video_path}' '{final_video_path}'\"\n",
-        "subprocess.run(command,shell=True)\n",
+        "# command = f\"mv '{upscaled_video_path}' '{final_video_path}'\"\n",
+        "# subprocess.run(command,shell=True)\n",
         "\n",
         "print(f\"Upscaled video saved to: {final_video_path}\")\n",
         "\n",
@@ -198,7 +198,7 @@
       "source": [
         "from google.colab import runtime\n",
         "\n",
-        "disconnect_when_finish = True  #@param{type:\"boolean\"}\n",
+        "disconnect_when_finish = False  #@param{type:\"boolean\"}\n",
         "\n",
         "if disconnect_when_finish:\n",
         "  runtime.unassign()"
