downgrade torch to 2.0.1

--- a/4k_Video_Upscaler_Colab_(Real_ESRGAN).ipynb
+++ b/4k_Video_Upscaler_Colab_(Real_ESRGAN).ipynb
@@ -4,8 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyMugTEtDo3Y/Acs0/C/gJxM",
+      "gpuType": "V100",
+      "authorship_tag": "ABX9TyMfvztXcJRPKmdHgzrGzGj8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,6 +65,7 @@
         "!git clone https://github.com/xinntao/Real-ESRGAN.git\n",
         "%cd Real-ESRGAN\n",
         "\n",
+        "!pip install -q torch==2.0.1 torchvision==0.15.2 --extra-index-url https://download.pytorch.org/whl/cu118\n",
         "!pip install -q basicsr facexlib gfpgan ffmpeg ffmpeg-python\n",
         "!pip install -q -r requirements.txt\n",
         "!python setup.py develop\n",
@@ -102,7 +103,7 @@
       },
       "outputs": [],
       "source": [
-        "video_path=\"/content/painting 4.mp4\" #@param{type:\"string\"}\n",
+        "video_path=\"/content/full 1.mp4\" #@param{type:\"string\"}\n",
         "output_dir=\"/content/\" #@param{type:\"string\"}\n",
         "resolution = \"FHD\" # @param [\"FHD\", \"2k\", \"4k\"] {type:\"string\"}\n",
         "model = \"RealESRGAN_x4plus\" #@param [\"RealESRGAN_x4plus\" , \"RealESRGAN_x4plus_anime_6B\", \"realesr-animevideov3\"]\n",
