Remove crop-to-fit, fix 1:1 AR issue, add more scale options

--- a/4k_Video_Upscaler_Colab_(Real_ESRGAN).ipynb
+++ b/4k_Video_Upscaler_Colab_(Real_ESRGAN).ipynb
@@ -4,8 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "V100",
-      "authorship_tag": "ABX9TyMfvztXcJRPKmdHgzrGzGj8",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyP7Kmi6fh5h9QepKjnJo5qj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,8 @@
     {
       "cell_type": "code",
       "source": [
-        "!nvidia-smi\n",
+        "import torch\n",
+        "assert torch.cuda.is_available(), \"GPU not detected.. Please change runtime to GPU\"\n",
         "\n",
         "from PIL import Image\n",
         "import cv2, os, subprocess\n",
@@ -105,12 +106,10 @@
       "source": [
         "video_path=\"/content/full 1.mp4\" #@param{type:\"string\"}\n",
         "output_dir=\"/content/\" #@param{type:\"string\"}\n",
-        "resolution = \"FHD\" # @param [\"FHD\", \"2k\", \"4k\"] {type:\"string\"}\n",
+        "resolution = \"4k (3840 x 2160)\" # @param [\"FHD (1920 x 1080)\", \"2k (2560 x 1440)\", \"4k (3840 x 2160)\",\"2 x original\", \"3 x original\", \"4 x original\"] {type:\"string\"}\n",
         "model = \"RealESRGAN_x4plus\" #@param [\"RealESRGAN_x4plus\" , \"RealESRGAN_x4plus_anime_6B\", \"realesr-animevideov3\"]\n",
-        "crop_to_fit=True #@param{type:\"boolean\"}\n",
         "\n",
-        "if not os.path.exists(video_path):\n",
-        "   assert False, \"Video file does not exist\"\n",
+        "assert os.path.exists(video_path), \"Video file does not exist\"\n",
         "\n",
         "video_capture = cv2.VideoCapture(video_path)\n",
         "video_width = int(video_capture.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
@@ -122,17 +121,29 @@
         "\n",
         "# Get output resolutions\n",
         "match resolution:\n",
-        "  case \"FHD\":\n",
+        "  case \"FHD (1920 x 1080)\":\n",
         "    final_width=1920\n",
         "    final_height=1080\n",
-        "  case \"2k\":\n",
+        "  case \"2k (2560 x 1440)\":\n",
         "    final_width=2560\n",
         "    final_height=1440\n",
-        "  case \"4k\":\n",
+        "  case \"4k (3840 x 2160)\":\n",
         "    final_width=3840\n",
         "    final_height=2160\n",
+        "  case \"2 x original\":\n",
+        "    final_width=2*video_width\n",
+        "    final_height=2*video_height\n",
+        "  case \"3 x original\":\n",
+        "    final_width=3*video_width\n",
+        "    final_height=3*video_height\n",
+        "  case \"4 x original\":\n",
+        "    final_width=4*video_width\n",
+        "    final_height=4*video_height\n",
         "\n",
-        "if aspect_ratio < 1:\n",
+        "if aspect_ratio == 1.0 and \"original\" not in resolution:\n",
+        "  final_height = final_width\n",
+        "\n",
+        "if aspect_ratio < 1.0 and \"original\" not in resolution:\n",
         "  temp = final_width\n",
         "  final_width = final_height\n",
         "  final_height = temp\n",
@@ -140,37 +151,19 @@
         "scale_factor = max(final_width/video_width, final_height/video_height)\n",
         "isEven = int(video_width * scale_factor) % 2 == 0 and int(video_height * scale_factor) % 2 == 0\n",
         "\n",
+        "# scale_factor needs to be even\n",
         "while isEven == False:\n",
         "  scale_factor += 0.01\n",
         "  isEven = int(video_width * scale_factor) % 2 == 0 and int(video_height * scale_factor) % 2 == 0\n",
         "\n",
-        "if not crop_to_fit:\n",
-        "  print(f\"Upscaling from {video_width}x{video_height} to {int(video_width * scale_factor)}x{int(video_height * scale_factor)}, crop_to_fit={crop_to_fit}\")\n",
-        "  print(f\"Enable crop_to_fit to make output resolution {final_width}x{final_height}\")\n",
-        "else:\n",
-        "  print(f\"Upscaling from {video_width}x{video_height} to {final_width}x{final_height}, crop_to_fit={crop_to_fit}\")\n",
+        "print(f\"Upscaling from {video_width}x{video_height} to {final_width}x{final_height}\")\n",
         "\n",
         "!python inference_realesrgan_video.py -n {model} -i '{video_path}' -o '{output_dir}' --outscale {scale_factor}\n",
         "\n",
         "video_name_with_ext = os.path.basename(video_path)\n",
         "video_name = video_name_with_ext.replace(\".mp4\",\"\")\n",
-        "upscaled_video_path = f\"{output_dir}{video_name}_out.mp4\"\n",
-        "\n",
         "final_video_name = f\"{video_name}_upscaled_{final_width}_{final_height}.mp4\"\n",
-        "\n",
-        "if not crop_to_fit:\n",
-        "  final_video_name = f\"{video_name}_upscaled_{int(video_width * scale_factor)}_{int(video_height * scale_factor)}.mp4\"\n",
-        "\n",
         "final_video_path = os.path.join(output_dir, final_video_name)\n",
-        "\n",
-        "# crop to fit\n",
-        "if crop_to_fit:\n",
-        "  command = f\"ffmpeg -loglevel error -hwaccel cuda -y -i '{upscaled_video_path}' -c:v h264_nvenc -filter:v  'crop={final_width}:{final_height}:(in_w-{final_width})/2:(in_h-{final_height})/2' -c:v libx264 -pix_fmt yuv420p '{final_video_path}'\"\n",
-        "  subprocess.run(command,shell=True)\n",
-        "  print(\"Cropping to fit done..\")\n",
-        "\n",
-        "# command = f\"mv '{upscaled_video_path}' '{final_video_path}'\"\n",
-        "# subprocess.run(command,shell=True)\n",
         "\n",
         "print(f\"Upscaled video saved to: {final_video_path}\")\n",
         "\n",
