Add crop-to-fit back

--- a/4k_Video_Upscaler_Colab_(Real_ESRGAN).ipynb
+++ b/4k_Video_Upscaler_Colab_(Real_ESRGAN).ipynb
@@ -4,8 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyP7Kmi6fh5h9QepKjnJo5qj",
+      "gpuType": "L4",
+      "authorship_tag": "ABX9TyO0SPIVxa4JWqex3KmRZ5ih",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -162,8 +162,13 @@
         "\n",
         "video_name_with_ext = os.path.basename(video_path)\n",
         "video_name = video_name_with_ext.replace(\".mp4\",\"\")\n",
+        "upscaled_video_path = f\"{output_dir}{video_name}_out.mp4\"\n",
         "final_video_name = f\"{video_name}_upscaled_{final_width}_{final_height}.mp4\"\n",
         "final_video_path = os.path.join(output_dir, final_video_name)\n",
+        "\n",
+        "# crop to fit\n",
+        "command = f\"ffmpeg -loglevel error -hwaccel cuda -y -i '{upscaled_video_path}' -c:v h264_nvenc -filter:v  'crop={final_width}:{final_height}:(in_w-{final_width})/2:(in_h-{final_height})/2' -c:v libx264 -pix_fmt yuv420p '{final_video_path}'\"\n",
+        "subprocess.run(command,shell=True)\n",
         "\n",
         "print(f\"Upscaled video saved to: {final_video_path}\")\n",
         "\n",
