rm crop_to_fit as scale_factor can be floats

--- a/4k_Video_Upscaler_Colab_(Real_ESRGAN).ipynb
+++ b/4k_Video_Upscaler_Colab_(Real_ESRGAN).ipynb
@@ -4,8 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "L4",
-      "authorship_tag": "ABX9TyO0SPIVxa4JWqex3KmRZ5ih",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyOSRQeNt5XJQ/u7jzPF+CmX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,9 +104,9 @@
       },
       "outputs": [],
       "source": [
-        "video_path=\"/content/full 1.mp4\" #@param{type:\"string\"}\n",
+        "video_path=\"/content/input.mp4\" #@param{type:\"string\"}\n",
         "output_dir=\"/content/\" #@param{type:\"string\"}\n",
-        "resolution = \"4k (3840 x 2160)\" # @param [\"FHD (1920 x 1080)\", \"2k (2560 x 1440)\", \"4k (3840 x 2160)\",\"2 x original\", \"3 x original\", \"4 x original\"] {type:\"string\"}\n",
+        "resolution = \"FHD (1920 x 1080)\" # @param [\"FHD (1920 x 1080)\", \"2k (2560 x 1440)\", \"4k (3840 x 2160)\",\"2 x original\", \"3 x original\", \"4 x original\"] {type:\"string\"}\n",
         "model = \"RealESRGAN_x4plus\" #@param [\"RealESRGAN_x4plus\" , \"RealESRGAN_x4plus_anime_6B\", \"realesr-animevideov3\"]\n",
         "\n",
         "assert os.path.exists(video_path), \"Video file does not exist\"\n",
@@ -156,7 +156,7 @@
         "  scale_factor += 0.01\n",
         "  isEven = int(video_width * scale_factor) % 2 == 0 and int(video_height * scale_factor) % 2 == 0\n",
         "\n",
-        "print(f\"Upscaling from {video_width}x{video_height} to {final_width}x{final_height}\")\n",
+        "print(f\"Upscaling from {video_width}x{video_height} to {final_width}x{final_height}, scale_factor={scale_factor}\")\n",
         "\n",
         "!python inference_realesrgan_video.py -n {model} -i '{video_path}' -o '{output_dir}' --outscale {scale_factor}\n",
         "\n",
@@ -165,10 +165,6 @@
         "upscaled_video_path = f\"{output_dir}{video_name}_out.mp4\"\n",
         "final_video_name = f\"{video_name}_upscaled_{final_width}_{final_height}.mp4\"\n",
         "final_video_path = os.path.join(output_dir, final_video_name)\n",
-        "\n",
-        "# crop to fit\n",
-        "command = f\"ffmpeg -loglevel error -hwaccel cuda -y -i '{upscaled_video_path}' -c:v h264_nvenc -filter:v  'crop={final_width}:{final_height}:(in_w-{final_width})/2:(in_h-{final_height})/2' -c:v libx264 -pix_fmt yuv420p '{final_video_path}'\"\n",
-        "subprocess.run(command,shell=True)\n",
         "\n",
         "print(f\"Upscaled video saved to: {final_video_path}\")\n",
         "\n",
@@ -180,7 +176,9 @@
         "\n",
         "  command = f\"'{final_video_path}' '{save_directory_drive}'/'{final_video_name}'\"\n",
         "  subprocess.run(command,shell=True)\n",
-        "  print(f\"Saved to drive: /{drive_folder}/{final_video_name}\" )"
+        "  print(f\"Saved to drive: /{drive_folder}/{final_video_name}\" )\n",
+        "\n",
+        "!rm {upscaled_video_path}"
       ]
     },
     {
