add crop_to_fit again :)

--- a/4k_Video_Upscaler_Colab_(Real_ESRGAN).ipynb
+++ b/4k_Video_Upscaler_Colab_(Real_ESRGAN).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOSRQeNt5XJQ/u7jzPF+CmX",
+      "authorship_tag": "ABX9TyNo7Sv82VzH+t3sj4q6tf29",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -166,6 +166,12 @@
         "final_video_name = f\"{video_name}_upscaled_{final_width}_{final_height}.mp4\"\n",
         "final_video_path = os.path.join(output_dir, final_video_name)\n",
         "\n",
+        "# crop to fit\n",
+        "if \"original\" not in resolution:\n",
+        "  print(\"Cropping to fit...\")\n",
+        "  command = f\"ffmpeg -loglevel error -hwaccel cuda -y -i '{upscaled_video_path}' -c:v h264_nvenc -filter:v  'crop={final_width}:{final_height}:(in_w-{final_width})/2:(in_h-{final_height})/2' -c:v libx264 -pix_fmt yuv420p '{final_video_path}'\"\n",
+        "  subprocess.run(command,shell=True)\n",
+        "\n",
         "print(f\"Upscaled video saved to: {final_video_path}\")\n",
         "\n",
         "# save to drive\n",
@@ -178,7 +184,7 @@
         "  subprocess.run(command,shell=True)\n",
         "  print(f\"Saved to drive: /{drive_folder}/{final_video_name}\" )\n",
         "\n",
-        "!rm {upscaled_video_path}"
+        "!rm \"{upscaled_video_path}\""
       ]
     },
     {
